--- a/css/myPage.css
+++ b/css/myPage.css
@@ -22,18 +22,159 @@
     bottom: 150px;
 }
 /* 第一屏幕制作 end */
+/* 第二屏幕制作 end */
 .section2 {
 	background: #84a2d4 url(../images/t1zdgpfi8exxca6rfn-2000-600.png) no-repeat center bottom;
 	z-index: 2;
 }
+.computer {
+    width: 990px;
+    height: 500px;
+    position: absolute;
+    left: 50%;
+    /* margin-left: 495px; */
+    transform: translateX(-50%);
+    bottom: 0;
+}
+.search{
+    width: 222px;
+    height: 45px;
+    background: url(../images/search.png) no-repeat;
+    right: -30px;
+    bottom: 300px;
+    position: absolute;
+    display: none;
+}
+.search-words{
+    position: absolute;
+    right: 32px;
+    top: 5px;
+    opacity: 0;  
+    /* 透明度为0 为了做淡入淡出的效果 */
+}
+.search-02-1{
+    position: absolute;
+    bottom: 300px;
+    right: 370px;
+    display: none;
+}
+.goods-02 {
+    height: 100px;
+    position: absolute;
+    bottom: 217px;
+    right: 270px;
+    display: none;   
+}
+.words-01{
+    position: absolute;
+    left: 50%;
+    bottom: 550px;
+    transform: translateX(-50%);
+}
+.words-02{
+    position: absolute;
+    left: 50%;
+    bottom: 550px;
+    transform: translateX(-50%);
+    opacity: 0;
+}
+.shirt-02{
+    position: absolute;
+    bottom: 345px;
+    left: 395px;
+    width: 100px;
+    display: none;
+}
+.cover{
+    position: absolute;
+    bottom: 345px;
+    right: 496px;
+    width: 101px;
+    height: 90px;
+    z-index: 5;
+    background-color: #fff;
+    display: none;
+    z-index: 10;
+}
+/* 第二屏幕制作 end */
+/* 第三屏幕制作 start */
 .section3 {
 	background: #ef674d;
 	z-index: 1;
 }
-.section4 {
-	background: #fed url(../images/t1iresfnxaxxca6rfn-2000-600.png) no-repeat center bottom;
+.main{
+    position: absolute;
+    width: 700px;
+    height: 500px;
+    background: url(../images/main.png) no-repeat center center;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 50px;
+}
+.select{
+    width: 300px;
+    height: 250px;
+    position: absolute;
+    bottom: 0;
+    right: 8px;
 
 }
+.btn{
+    position: absolute;
+    bottom: 10px;
+}
+.img{
+    position: absolute;
+    top: 0;
+}
+.img-01-a{
+    opacity: 0;
+}
+.btn-01-a{
+    opacity: 0;
+}
+.shirt-03,
+.t1f{
+    position: absolute;
+    left: 115px;
+    bottom: 200px;
+    display: none;
+}
+/* 第三屏幕制作 end */
+/* 第四屏幕制作 start */
+.section4 {
+	background: #fed url(../images/t1iresfnxaxxca6rfn-2000-600.png) no-repeat center bottom;
+}
+.cloud{
+    position: absolute;
+    left: 50%;
+    bottom: 550px;
+}
+.word{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 500px;
+} 
+.words-04-a{
+    opacity: 0;
+}
+.car{
+    width: 500px;
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.car-img{
+    position: absolute;
+    bottom: 200px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: -1;
+    display: none;
+}
+/* 第四屏幕制作 end */
 .section5 {
 	background: #d04759 url(../images/t1yisqfa4exxa3gmkg-2000-1500.png);
 	/* overflow: hidden; */
@@ -85,5 +226,19 @@
     }
     100%{
         bottom: 335px;
+    }
+}
+.cloud-back1{
+    animation: cloud 60s linear infinite;
+}
+@keyframes cloud{
+    0%{
+        left: 50%;
+    }
+    50%{
+        left: -10%;
+    }
+    100%{
+        left: 50%;
     }
 }
